# v-i-y-o-n

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml
agents/: __init__.py  atlas.py  base_agent.py  echo.py  forge.py  ghost.py  luna.py  nexus.py  nova.py  pulse.py  sage.py  shield.py  tempo.py  vista.py
core/: __init__.py  config.py  events.py  listener.py  memory.py  orchestrator.py  parallel.py  router.py  speaker.py  wake_word.py
docs/: CLAUDE.md
hud/: __init__.py  server.py
hud/static/: hud.js  index.html  style.css
integrations/: __init__.py  canva_mcp.py  claude_code_mcp.py  local_llm.py  notion_mcp.py
logs/: __init__.py  history.py  logger.py
tests/: test_agents.py  test_approval.py  test_coding_agents.py  test_comm_data_agents.py  test_design_support_agents.py  test_end_to_end.py  test_hud.py  test_local_llm.py  test_research_agents.py  test_router.py  test_tools.py  test_voice.py
tools/: __init__.py  approval.py  file_ops.py  mac_control.py  terminal.py  web.py
